--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -46,7 +46,7 @@
   }
 }
 
-//暂时性解决dialog 问题 https://github.com/ElemeFE/element/issues/2461
+//暂时性解决dialog
 .el-dialog {
   transform: none;
   left: 0;
